# STMAHM

./: .gitignore  CHANGELOG.md  CODE_REVIEW_2026.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
examples/: arp_monitoring.rs  passive_discovery.rs
src/: config.rs  lib.rs  main.rs  models.rs
src/alerts/: detector.rs
src/database/: connection.rs  encryption.rs  encryption_tests.rs  mod.rs  models.rs  queries.rs  schema.rs
src/exports/: csv.rs  json.rs  pdf.rs
src/insights/: distribution.rs  health.rs  mod.rs  recommendations.rs  vulnerability_filter.rs
src/logging/: mod.rs
src/monitor/: events.rs  mod.rs  passive_integration.rs  watcher.rs
src/network/: device.rs  dns.rs  interface.rs  mod.rs  subnet.rs  subnet_tests.rs  vendor.rs
src/scanner/: arp.rs  icmp.rs  mod.rs  snmp.rs  tcp.rs
src/scanner/passive/: arp.rs  mdns.rs  mod.rs
tests/: alerts_dedupe_integration.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: commands.rs  demo_data.rs  main.rs
ui/src/components/: MonitoringPanel.tsx
ui/src/components/bento/: BentoCard.tsx  HealthScoreCard.tsx  ScanProgress.tsx  index.ts
ui/src/components/charts/: BandwidthChart.tsx  LatencyChart.tsx
ui/src/components/common/: AlertBadge.tsx  AlertPanel.tsx  Breadcrumb.tsx  Button.tsx  CircularProgress.tsx  ContextMenu.tsx  CustomSelect.tsx  DemoBanner.tsx  ErrorBoundary.tsx  FAB.tsx  GlassCard.tsx  HeroStatCard.tsx  Input.tsx  LogoIcon.tsx  MetricCard.tsx  Select.tsx  TabFilter.tsx  ThemeToggle.tsx  Toast.tsx  Toggle.tsx  WelcomeScreen.tsx  index.ts
ui/src/components/dashboard/: DeviceCard.tsx  EmptyDashboard.tsx  NetworkHealthCard.tsx  RecentEventsPanel.tsx  StatCard.tsx
ui/src/components/devices/: DeviceDetailModal.tsx
ui/src/hooks/: useDatabase.tsx  useDemoMode.tsx  useExport.tsx  useKeyboardShortcuts.ts  useMonitoring.tsx  usePlatform.ts  useScan.tsx  useSidebarCollapse.ts  useTheme.tsx
ui/src/lib/: mapping-themes.ts  mock-data.ts  platform.ts  tauri-commands.ts  topology-layout.ts
ui/src/lib/api/: types.ts  (+1 more)
ui/src/pages/: Alerts.tsx  ComponentDemo.tsx  Dashboard.tsx  DeviceList.tsx  Reports.tsx  Settings.tsx  Tools.tsx  TopologyView.tsx  Vulnerabilities.tsx
(+13 files in other folders)
