[package]
name = "network-topology-mapper"
version = "0.1.0"
description = "Network Topology Mapper Desktop Application"
authors = ["Network Topology Mapper Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Reference your existing scanner library
host-discovery = { path = "../.." }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
