[package]
name = "network-topology-mapper"
version = "0.1.2"
description = "Network Topology Mapper Desktop Application"
authors = ["Network Topology Mapper Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.38", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Network tools
surge-ping = "0.8"

# Demo mode
chrono = { version = "0.4", features = ["serde"] }

# Reference your existing scanner library
host-discovery = { path = "../.." }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
